# altair-rs

./: .gitignore  CLAUDE.md  Cargo.toml  INSTRUCTION.md  LICENSE  README.md  Taskfile.yml  deny.toml  flake.nix  release-plz.toml  rust-toolchain.toml
.github/workflows/: ci.yml  docs.yml  release.yml
crates/altair-base32/: CHANGELOG.md  Cargo.toml  README.md
crates/altair-base32/examples/: basic.rs  error_handling.rs  lenient_decoding.rs  u64_ids.rs  ulid_style.rs  with_check_digit.rs
crates/altair-base32/src/: bytes.rs  check.rs  error.rs  lib.rs  prelude.rs  u64.rs
crates/altair-base32/tests/: integration.rs
crates/altair-compress/: CHANGELOG.md  Cargo.toml  README.md
crates/altair-compress/examples/: basic.rs  gzip_file.rs  tar_directory.rs  tar_gz_backup.rs  zip_directory.rs  zip_slip_protection.rs
crates/altair-compress/src/: error.rs  gzip.rs  lib.rs  prelude.rs  safe_path.rs  tar.rs  tarball.rs  zip.rs
crates/altair-compress/tests/: integration.rs
crates/altair-concurrent/: CHANGELOG.md  Cargo.toml  README.md
crates/altair-concurrent/examples/: basic.rs  fail_fast.rs  partial_results.rs  traced_tasks.rs  with_cancellation.rs  with_otel.rs  with_timeout.rs
crates/altair-concurrent/src/: error.rs  executor.rs  lib.rs  prelude.rs  task_map.rs
crates/altair-concurrent/tests/: integration.rs
crates/altair-config/: CHANGELOG.md  Cargo.toml  README.md
crates/altair-config/examples/: basic.rs  env_override.rs  from_file.rs  from_reader.rs  layered_loader.rs  validation_errors.rs
crates/altair-config/src/: error.rs  lib.rs  loader.rs  loaders.rs  prelude.rs
crates/altair-config/tests/: integration.rs
crates/altair-db/: CHANGELOG.md  Cargo.toml  README.md
crates/altair-db/examples/: basic_orm.rs  materialized_view.rs  migrations.rs  raw_sqlx.rs  transaction.rs  with_config.rs  with_otel.rs
crates/altair-db/src/: config.rs  connect.rs  db.rs  error.rs  lib.rs  prelude.rs
crates/altair-db/tests/: mysql.rs  postgres.rs  sqlite.rs
crates/altair-otel/: CHANGELOG.md  Cargo.toml  README.md
crates/altair-otel/examples/: all_metric_types.rs  basic.rs  from_env.rs  graceful_shutdown.rs  instrumented_functions.rs  production_otlp.rs
crates/altair-otel/src/: config.rs  error.rs  globals.rs  init.rs  lib.rs  prelude.rs  testcontainer.rs
crates/altair-otel/tests/: exporter_otlp.rs  exporter_stdout.rs  integration.rs
crates/altair-rest/: CHANGELOG.md  Cargo.toml  README.md
crates/altair-rest/examples/: basic.rs  bearer_auth.rs  custom_middleware.rs  json_round_trip.rs  with_otel.rs  with_retry.rs  with_tracing.rs
crates/altair-rest/src/: client.rs  config.rs  error.rs  json.rs  lib.rs  prelude.rs
crates/altair-rest/tests/: integration.rs
crates/altair-retry/: CHANGELOG.md  Cargo.toml  README.md
crates/altair-retry/examples/: all_knobs.rs  basic.rs  flaky_api_pattern.rs  permanent_error.rs  tracing_output.rs  with_cancellation.rs  with_otel.rs
crates/altair-retry/src/: config.rs  error.rs  lib.rs  prelude.rs  retry.rs
crates/altair-retry/tests/: integration.rs
crates/altair-server/: CHANGELOG.md  Cargo.toml  README.md
crates/altair-server/examples/: basic.rs  custom_health.rs  custom_middleware.rs  graceful_shutdown.rs  with_otel.rs  with_routes.rs  with_state.rs
crates/altair-server/src/: builder.rs  error.rs  health.rs  lib.rs  middleware.rs  prelude.rs  server.rs  shutdown.rs
crates/altair-server/tests/: integration.rs
crates/altair-temporal/: CHANGELOG.md  Cargo.toml  README.md
crates/altair-temporal/examples/: basic_worker.rs  retry_policy.rs  schedule_cron.rs  scheduled_workflow.rs  with_config.rs  with_otel.rs  workflow_id_payload.rs
crates/altair-temporal/src/: activity.rs  client.rs  config.rs  error.rs  lib.rs  prelude.rs  retry.rs  schedule.rs  testcontainer.rs  worker.rs  workflow_id.rs
crates/altair-temporal/tests/: integration.rs  workflow_id.rs
crates/altair-wf/: CHANGELOG.md  Cargo.toml  README.md
crates/altair-wf/examples/: README.md  datasync_chunked.rs  datasync_runner.rs  function_registry.rs  hello_dag.rs  hello_execute.rs  hello_loop.rs  hello_parallel.rs  hello_parameterized_loop.rs  hello_pipeline.rs  scheduled_all.rs
crates/altair-wf/src/: dag.rs  error.rs  helpers.rs  lib.rs  patterns.rs  prelude.rs  traits.rs  types.rs
crates/altair-wf/src/datasync/: job.rs  mapper.rs  mod.rs  result.rs  runner.rs  sink.rs  source.rs
crates/altair-wf/src/datasync/chunk/: iterate.rs  mod.rs  partition.rs  partitioner.rs  sync.rs  tracker.rs
crates/altair-wf/src/function/: activity.rs  mod.rs  payload.rs  registry.rs
crates/altair-wf/tests/: integration.rs
docs/: architecture.md  porting-tracker.md
docs/plans/: 2026-05-27-altair-rs-starter-implementation.md  2026-05-28-altair-base32-implementation.md  2026-05-28-altair-compress-implementation.md  2026-05-28-altair-rest-implementation.md  2026-05-28-altair-server-implementation.md  2026-05-29-altair-db-implementation.md  2026-05-29-altair-temporal-implementation.md
docs/specs/: 2026-05-27-altair-rs-starter-design.md  2026-05-28-altair-base32-design.md  2026-05-28-altair-compress-design.md  2026-05-28-altair-rest-design.md  2026-05-28-altair-server-design.md  2026-05-29-altair-db-design.md  2026-05-29-altair-temporal-design.md
