[package]
name = "altair-compress"
description = "Path-based recipes for gzip, tar, and zip with zip-slip protection"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["compression", "gzip", "tar", "zip", "archive"]
categories = ["compression", "filesystem"]

[dependencies]
flate2 = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
anyhow = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
