[package]
name = "altair-otel"
description = "One-call OpenTelemetry setup with tracing-subscriber integration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["opentelemetry", "tracing", "observability", "otlp"]
categories = ["development-tools::debugging", "asynchronous"]

[features]
default = ["otlp-grpc"]
otlp-grpc = ["opentelemetry-otlp/grpc-tonic"]
otlp-http = ["opentelemetry-otlp/http-proto", "opentelemetry-otlp/reqwest-client"]
console = []
# Public, reusable OTel collector testcontainer fixture for downstream
# integration tests. Enable in your `[dev-dependencies]` to get
# `altair_otel::testcontainer::OtelCollectorContainer`.
testcontainers = ["dep:testcontainers"]
# Run this crate's own integration tests against a real collector
# container. Requires Docker. Always implies `testcontainers`.
integration-tests = ["testcontainers"]

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-stdout = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
thiserror = { workspace = true }
# Optional: enabled by the `testcontainers` feature.
testcontainers = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
pretty_assertions = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
