[package]
name = "altair-temporal"
description = "Stable facade over the pre-1.0 temporalio Rust SDK: typed Config, worker/client builders, retry + schedule builders, OTel-aware tracing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["temporal", "workflow", "activity", "async"]
categories = ["asynchronous"]

[features]
default = ["tls"]
tls = []
# Public, reusable Temporal testcontainer fixture for downstream integration
# tests. Enable in your own `[dev-dependencies]` to get
# `altair_temporal::testcontainer::TemporalContainer`.
testcontainers = ["dep:testcontainers"]
# Run this crate's own integration tests against a real Temporal container.
# Requires Docker. Always implies `testcontainers`.
integration-tests = ["testcontainers"]

[dependencies]
temporalio-sdk = { workspace = true }
temporalio-sdk-core = { workspace = true }
temporalio-client = { workspace = true }
temporalio-common = { workspace = true }
temporalio-macros = { workspace = true }
temporalio-workflow = { workspace = true }
prost-wkt-types = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
altair-base32 = { path = "../altair-base32", version = "0.3" }
# Optional: enabled by the `testcontainers` feature.
testcontainers = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
anyhow = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
# Required by the SDK's #[workflow] / #[activities] proc-macros, which
# expand to `::futures::...` (activities) and `::futures_util::...`
# (workflows). Both crates must be in the dependency graph or the macros
# fail to resolve their paths.
futures = { workspace = true }
futures-util = "0.3"
serde = { workspace = true }
# Sibling crates for examples only. Path-only — cargo publish strips
# them; avoids cross-crate version cycles on major bumps.
altair-otel = { path = "../altair-otel" }
altair-config = { path = "../altair-config" }

[lints]
workspace = true
