[package]
name = "altair-wf"
description = "Reusable Temporal workflow patterns: single, pipeline, parallel, loop, DAG. Built on altair-temporal."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["temporal", "workflow", "pipeline", "dag", "orchestration"]
categories = ["asynchronous"]

[features]
default = []
# Registry + named-function dispatch on top of the workflow patterns.
# Enable when porting Go consumers of go-wf/function or building any
# workflow that needs to look up a handler by string name at runtime.
# Pulls in the temporalio-* crates directly because the SDK's
# `#[activities]` macro expands to `::temporalio_sdk::*` /
# `::temporalio_common::*` absolute paths.
function = ["dep:temporalio-sdk", "dep:temporalio-common"]
# Data-sync pipeline: Source -> Mapper -> Sink + partitioned, resumable
# chunked sync (continue-as-new). SDK-agnostic core; the workflow body
# wires its own activities and calls the `chunked_sync_run` helper.
# Pulls in `async-trait` because the Source/Mapper/Sink traits use it.
datasync = ["dep:async-trait"]
# Run this crate's own integration tests against a real Temporal container.
# Requires Docker. Pulls in altair-temporal's TemporalContainer fixture.
integration-tests = [
    "altair-temporal/testcontainers",
    "function",
    "datasync",
]

[dependencies]
altair-temporal = { path = "../altair-temporal", version = "0.2" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
# Pulled in by the `function` feature so the SDK's `#[activities]`
# macro can resolve its absolute paths.
temporalio-sdk = { workspace = true, optional = true }
temporalio-common = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
anyhow = { workspace = true }
pretty_assertions = { workspace = true }
# Required by the SDK's #[workflow] / #[activities] proc-macros, which
# expand to ::futures, ::futures_util, ::temporalio_sdk, ::temporalio_common,
# and ::temporalio_macros absolute paths. We re-export the temporalio
# crates via altair-temporal, but the macros need them resolvable from
# the test crate root — hence the explicit dev-deps here.
futures = { workspace = true }
futures-util = "0.3"
serde = { workspace = true }
temporalio-sdk = { workspace = true }
temporalio-common = { workspace = true }
temporalio-macros = { workspace = true }
# `async-trait` is also needed by the datasync_runner example which
# implements `Source` / `Sink` traits in the example body.
async-trait = { workspace = true }

[lints]
workspace = true

# ---------------------------------------------------------------------------
# Examples — see `examples/README.md`. Default-feature examples run
# `cargo run -p altair-wf --example <name>`; feature-gated ones need
# `--features function` or `--features datasync`.
# ---------------------------------------------------------------------------

[[example]]
name = "hello_execute"
path = "examples/hello_execute.rs"

[[example]]
name = "hello_pipeline"
path = "examples/hello_pipeline.rs"

[[example]]
name = "hello_parallel"
path = "examples/hello_parallel.rs"

[[example]]
name = "hello_loop"
path = "examples/hello_loop.rs"

[[example]]
name = "hello_parameterized_loop"
path = "examples/hello_parameterized_loop.rs"

[[example]]
name = "hello_dag"
path = "examples/hello_dag.rs"

[[example]]
name = "function_registry"
path = "examples/function_registry.rs"
required-features = ["function"]

[[example]]
name = "datasync_runner"
path = "examples/datasync_runner.rs"
required-features = ["datasync"]

[[example]]
name = "datasync_chunked"
path = "examples/datasync_chunked.rs"
required-features = ["datasync"]
